--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://username:password@clusterfortextz.u8ahenn.mongodb.net/?retryWrites=true&w=majority&appName=Clusterfortextz
+MONGO_URI=mongodb+srv://jashan:jashan123@clusterfortextz.u8ahenn.mongodb.net/?retryWrites=true&w=majority&appName=Clusterfortextz
+JWT_SECRET=jashan
+NODE_ENV=production
