--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node sever.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "why we did it": "npm run dev or npm run start are shortcuts"
   },
@@ -20,6 +20,6 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.5"
   }
 }
